Restructures the html to better match requirements.  Enables word-breaking on emails to prevent them from spilling out of the column

--- a/front-end/src/styles.scss
+++ b/front-end/src/styles.scss
@@ -93,6 +93,10 @@ label.disabled {
   white-space: nowrap;
 }
 
+.word-break {
+  word-break: break-word;
+}
+
 .super-header {
   font-size: 48px;
 }
